# Bank

./: .env.template  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
reports/: report_spending_by_category_20250602.json  report_супермаркеты_202112.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
