[tool.poetry]
name = "transaction_analyzer"
version = "0.1.0"
description = "Анализ банковских транзакций"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
openpyxl = "^3.0.9"
requests = "^2.26.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.9b0"
isort = "^5.10.1"
mypy = "^0.910"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | __pycache__
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv/"

[tool.flake8]
exclude = [
    ".venv/*",
    "**/.venv/*",
    "**/venv/*",
    "**/env/*",
    "**/.env/*",
    "**/ENV/*",
]